@@ -3,6 +3,7 @@ Changes for 4.0.3rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-9011] added new LLD macros for vmware HV low-level discovery (MVekslers)
 ..F....... [ZBX-15105] fixed colorpicker tooltip update (talbergs)
 A.F....... [ZBX-14928] fixed "check now" being executed for active items and templates (talbergs)
 ..F....... [ZBX-15153] fixed custom interval validation; fixed parsing of custom intervals when user macros context contains forward slash (Ivo, miks)
